Added few more elements

--- a/test.html
+++ b/test.html
@@ -1,3 +1,18 @@
-<h1> Hey, I'm a big heading </h1>
-<p> Hey, I'm a paragrah element. Cool huh?</p>
-<a href="http://www.google.com" target="_blank">Click Me, I'm a modafuckin Link ! </a>
+<!DOCTYPE html>
+<html>
+        <head>
+            <title>Test page</title>
+        </head>
+
+        <body>
+            h1> Hey, I'm a big heading </h1>
+            <p> Hey, I'm a <b>paragrah element. Cool huh?</b></p>
+            <a href="http://www.google.com" target="_blank">Click Me, I'm a modafuckin Link ! </a>
+            <p>My name is: <br>
+                Kitty Cat 
+            </p>
+
+
+        </body>
+
+</html>
